# FMPose3D

./: .gitignore  QuickVim.md  README.md  config_env_for_new_container.sh  handbook.ipynb  pyproject.toml
.github/workflows/: README.md  build.yaml  check-headers.yml  codespell.yml  release-pypi.yml
PrimatePose/: .gitignore  Dockerfile  Dockerfile.dlc3  Dockerfile.ti  Makefile  dev_pfm.py  docker.source  kill_high_memory_processes.sh  pfm_JSON_v7.py  readme.ipynb  readme_primatepose.md  requirements.txt  sample_json.py  split_v8_json.py  streamlit-annotation-verifier_ti.py  streamlit-annotation-verifier_ti_v2.py  streamlit-annotation-verifier_ti_v8.py  streamlit-annotation-verifier_ti_v8_riken.py
PrimatePose/COCO_pose/: COCO_json_processor.py
PrimatePose/CTD_primate/: BUCTD_primate.py  CTD_primate.py  create_dlc_project_from_coco_CTD.py  create_dlc_project_from_coco_CTD.sh  create_dlc_project_from_coco_CTD_symlink.py  evaluation_CTD.sh  train_CTD.sh  tri_mouse_video_inference.py  tutorial_BUCTD.py
PrimatePose/Pose3D/: loss.py  model.py  test.py
PrimatePose/Pose3DFromImage/: run_test.sh  test.py  train.py  train.sh
PrimatePose/Pose3DFromImageGlobal/: dataset.py  run_test.sh  test.py  train.py  train.sh  utils.py
PrimatePose/SuperAnimal/: create_coco_project.sh  create_coco_project_Quadruped.sh  create_coco_project_TVM5k.sh  train.py  (+13 more)
animals/: README.md
basic_skills/: download_files_from_google_drive.py  linux_manual.md
demo/: vis_in_the_wild.py  vis_in_the_wild.sh
fmpose/: __init__.py  aggregation_methods.py
fmpose3d/: __init__.py  aggregation_methods.py  fmpose3d.py
pre_trained_models/: readme.md
sapiens/: .gitignore  Dockerfile  Dockerfile.sapiens_lite  Dockerfile.ti  DockerfileTest  Dockerfile_cluster  Makefile  readme_sapiens.md  reproduce_record.md  rsync_data.sh  run.sh  run_cluster.sh  runai.sh
scripts/: FMPose3D_main.py  FMPose3D_test.sh  FMPose3D_train.sh  FMPose_main.py  FMPose_test.sh  FMPose_train.sh  update_headers.py
tests/: test_config.py  test_demo_human.py  test_fmpose3d.py  test_model.py  test_training_pipeline.py
(+425 files in other folders)
